[package]
name = "ed25519_to_curve25519"
version = "0.2.0"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Convert ed25519 keys and sign to curve25519"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/ed25519_to_curve25519"
repository = "https://github.com/deadblackclover/ed25519_to_curve25519"
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
